2007-05-08  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (all): Revert SHIRAI's 2007-04-24 changes and fix it to
	accompany Ito-san's patch [w3m-dev 04233].
	(w3m-display-ins-del): New option.
	(w3m-support-emacs-w3m): Remove this variable.
	(w3m-strike-through-face): Modify.
	(w3m-insert-face): Ditto.
	(w3m-strike-through-face-no-windowsystem): Remove this face.
	(w3m-fontify-insert): Remove this variable.
	(w3m-halfdump-command-arguments): Remove w3m-support-emacs-w3m.
	(w3m-halfdump-command-common-arguments): Add w3m-display-ins-del
	support.
	(w3m-fontify-strike-through): Rewrite.
	(w3m-fontify-insert): Ditto.
	(w3m-set-display-ins-del): New function.
	(w3m-rendering-half-dump): Call w3m-set-display-ins-del.

2007-04-30  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-form.el (w3m-form-resume): Also resume contents of forms without
	name.
	(w3m-fontify-textareas): Also fontify textareas without name.
	(w3m-form-field-parse): Also parse form fields without name.

2007-04-28  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-decode-buffer): Use w3m-url-transfer-encode-string
	instead of w3m-url-encode-string.

2007-04-27  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-view-this-url): Check if w3m-current-url is string before
	matching.

2007-04-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-decode-buffer): Fully decode a source by default.
	(w3m-view-source): Doc fix.

2007-04-26  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-goto-url): Redisplay to search an anchor sure with
	goto-new-session.

2007-04-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-view-source-decode-level): New variable.
	(w3m-decode-buffer): Control how much it decodes an html source
	according to w3m-view-source-decode-level.
	(w3m-view-source): Bind w3m-view-source-decode-level with prefix arg.

2007-04-25  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-decode-buffer): Encode urls containing non-ASCII
	characters quoted with '' as well as those quoted with "".